Accordion: Body Overflow Fix (#611)
* Accordion: Fix collapsible rendering

This update fixes the Collapsible component styles within Accordion. The
solution was to migrate the `.scss` styles to `.css.js`.

* Add Collapsible.css.ts

* Move Accordion.css.ts to styles directory

* Move Collapsible.css.ts to styles directory

--- a/src/styles/components/Collapsible.scss
+++ b/src/styles/components/Collapsible.scss
@@ -1,6 +1,2 @@
-.c-Collapsible {
-  @import "../resets/base";
-  overflow: hidden;
-  transition-property: height;
-  will-change: height;
-}
+// Is now being rendered by Fancy :)
+// File exists to preserve @import implementation.
